plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.0'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'jacoco'
	id "org.sonarqube" version "6.2.0.5505"
}

group = 'xyz.samsami'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

jacoco {
	toolVersion = "0.8.10"
}

jacocoTestReport {
	reports {
		xml.required = true
		html.required = true
	}

	afterEvaluate {
		classDirectories.setFrom(
			files(classDirectories.files.collect {
				fileTree(dir: it,
					include: [
						'**/service/**',
						'**/repository/**'
					],
					exclude: [
							'**/common/**'
					]
                )
			})
		)
	}
}

sonar {
	properties {
		property "sonar.projectKey", "brobro332_332-blokey-land-service"
		property "sonar.organization", "brobro332"
		property "sonar.host.url", "https://sonarcloud.io"
		property "sonar.coverage.jacoco.xmlReportPaths", "${layout.buildDirectory.get().asFile}/reports/jacoco/test/jacocoTestReport.xml"

		property "sonar.inclusions", "src/main/java/**/service/**,src/main/java/**/repository/**"
		property "sonar.coverage.exclusions", """
            **/*Application.class,
            **/*Application.java,
            **/config/**,
            **/dto/**,
            **/entity/**,
            **/exception/**,
            **/common/**
        """
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.8")
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'io.github.cdimascio:dotenv-java:2.2.4'
	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
	implementation 'org.apache.commons:commons-compress:1.26.2'
	implementation 'p6spy:p6spy:3.9.1'
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	annotationProcessor 'org.projectlombok:lombok'
	annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
	annotationProcessor 'jakarta.persistence:jakarta.persistence-api:3.1.0'
	annotationProcessor 'jakarta.annotation:jakarta.annotation-api:2.1.1'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation "org.testcontainers:testcontainers:1.19.8"
	testImplementation "org.testcontainers:junit-jupiter:1.19.8"
	testImplementation "org.testcontainers:postgresql:1.19.8"

	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'org.postgresql:postgresql:42.7.3'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

def querydslDir = layout.buildDirectory.dir("generated/querydsl").get().asFile

sourceSets {
	main {
		java {
			srcDir querydslDir
		}
	}
}

tasks.named('compileJava') {
	options.generatedSourceOutputDirectory = file(querydslDir)
}

tasks.named('test') {
	useJUnitPlatform()
}
